[gd_scene load_steps=42 format=2]

[ext_resource path="res://Assets/NewCharacterAssets/Woodcutter_idle2.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/NewCharacterAssets/Woodcutter_idle4.png" type="Texture" id=3]
[ext_resource path="res://Assets/NewCharacterAssets/Woodcutter_idle3.png" type="Texture" id=4]
[ext_resource path="res://Assets/NewCharacterAssets/Woodcutter_idle1.png" type="Texture" id=5]
[ext_resource path="res://Assets/NewCharacterAssets/Woodcutter_run2.png" type="Texture" id=6]
[ext_resource path="res://Assets/NewCharacterAssets/Woodcutter_run4.png" type="Texture" id=7]
[ext_resource path="res://Assets/NewCharacterAssets/Woodcutter_run6.png" type="Texture" id=8]
[ext_resource path="res://Assets/NewCharacterAssets/Woodcutter_run3.png" type="Texture" id=9]
[ext_resource path="res://Assets/NewCharacterAssets/Woodcutter_run5.png" type="Texture" id=10]
[ext_resource path="res://Assets/NewCharacterAssets/Woodcutter_run1.png" type="Texture" id=11]
[ext_resource path="res://Assets/NewCharacterAssets/Woodcutter_walk3.png" type="Texture" id=12]
[ext_resource path="res://Assets/NewCharacterAssets/Woodcutter_walk2.png" type="Texture" id=13]
[ext_resource path="res://Assets/NewCharacterAssets/Woodcutter_walk5.png" type="Texture" id=14]
[ext_resource path="res://Assets/NewCharacterAssets/Woodcutter_walk1.png" type="Texture" id=15]
[ext_resource path="res://Assets/NewCharacterAssets/Woodcutter_walk4.png" type="Texture" id=16]
[ext_resource path="res://Assets/NewCharacterAssets/Woodcutter_walk6.png" type="Texture" id=17]
[ext_resource path="res://Assets/NewCharacterAssets/Woodcutter_jumpIDLE.png" type="Texture" id=18]
[ext_resource path="res://Assets/NewCharacterAssets/Woodcutter_fall.png" type="Texture" id=19]
[ext_resource path="res://Assets/NewCharacterAssets/Woodcutter_jumpUP.png" type="Texture" id=20]
[ext_resource path="res://Assets/NewCharacterAssets/Woodcutter_slide3.png" type="Texture" id=21]
[ext_resource path="res://Assets/NewCharacterAssets/Woodcutter_slide1.png" type="Texture" id=22]
[ext_resource path="res://Assets/NewCharacterAssets/Woodcutter_slide2.png" type="Texture" id=23]
[ext_resource path="res://Assets/NewCharacterAssets/Woodcutter_Chop6.png" type="Texture" id=24]
[ext_resource path="res://Assets/NewCharacterAssets/Woodcutter_Chop5.png" type="Texture" id=25]
[ext_resource path="res://Assets/NewCharacterAssets/Woodcutter_Chop1.png" type="Texture" id=26]
[ext_resource path="res://Assets/NewCharacterAssets/Woodcutter_Chop4.png" type="Texture" id=27]
[ext_resource path="res://Assets/NewCharacterAssets/Woodcutter_Chop3.png" type="Texture" id=28]
[ext_resource path="res://Assets/NewCharacterAssets/Woodcutter_Chop2.png" type="Texture" id=29]
[ext_resource path="res://Assets/NewCharacterAssets/Woodcutter_swipe2.png" type="Texture" id=30]
[ext_resource path="res://Assets/NewCharacterAssets/Woodcutter_swipe4.png" type="Texture" id=31]
[ext_resource path="res://Assets/NewCharacterAssets/Woodcutter_swipe3.png" type="Texture" id=32]
[ext_resource path="res://Assets/NewCharacterAssets/Woodcutter_swipe6.png" type="Texture" id=33]
[ext_resource path="res://Assets/NewCharacterAssets/Woodcutter_swipe5.png" type="Texture" id=34]
[ext_resource path="res://Assets/NewCharacterAssets/Woodcutter_swipe1.png" type="Texture" id=35]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 16 ), ExtResource( 14 ), ExtResource( 17 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "JumpIdle",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "JumpUp",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 8 ) ],
"loop": true,
"name": "Run",
"speed": 8.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 23 ), ExtResource( 21 ) ],
"loop": true,
"name": "Slide",
"speed": 8.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 29 ), ExtResource( 28 ), ExtResource( 27 ), ExtResource( 25 ), ExtResource( 24 ) ],
"loop": true,
"name": "Chop",
"speed": 8.0
}, {
"frames": [ ExtResource( 35 ), ExtResource( 30 ), ExtResource( 32 ), ExtResource( 31 ), ExtResource( 34 ), ExtResource( 33 ) ],
"loop": true,
"name": "Swing",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9, 12 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12, 7 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 9, 13 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10, 13 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 5
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -16 )
frames = SubResource( 1 )
animation = "Chop"
frame = 4

[node name="StandardEnviornmentCollider" type="CollisionShape2D" parent="."]
position = Vector2( 0, -13 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, -65 )
current = true
limit_left = 0
limit_right = 848
limit_bottom = 350
smoothing_enabled = true
smoothing_speed = 6.0
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1

[node name="SlideEnviorenmentCollider" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 3 )
disabled = true

[node name="SwingAttackArea" type="Area2D" parent="." groups=[
"player_swing_attack",
]]
collision_layer = 2
collision_mask = 0

[node name="SwingAttackAreaCollider" type="CollisionShape2D" parent="SwingAttackArea"]
position = Vector2( 16, -13 )
shape = SubResource( 4 )
disabled = true

[node name="ChopAttackArea" type="Area2D" parent="." groups=[
"player_chop_attack",
]]
collision_layer = 2
collision_mask = 0

[node name="ChopAttackAreaCollider" type="CollisionShape2D" parent="ChopAttackArea"]
position = Vector2( 18, -16 )
shape = SubResource( 5 )
disabled = true

[node name="PlayerHitbox" type="Area2D" parent="."]
collision_mask = 12

[node name="PlayerHitboxCollision" type="CollisionShape2D" parent="PlayerHitbox"]
position = Vector2( 0, -14 )
shape = SubResource( 6 )
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="area_entered" from="PlayerHitbox" to="." method="_on_PlayerHitbox_area_entered"]
